<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0dp"
            android:text="@string/app_name"
            android:textColor="#757575"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_title"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/author"
            android:textColor="#616161"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/selfie"
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:layout_below="@id/author"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selfie"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/about_title"
            android:textColor="#757575"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/about_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_title"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/about_paragraph"
            android:textColor="#757575"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resume_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_paragraph"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/resume_title"
            android:textColor="#757575"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/upload_resume_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/resume_title"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/upload_resume_text"
            android:textColor="#757575"
            android:textSize="20sp" />

        <Button
            android:id="@+id/popup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/upload_resume_text"
            android:layout_marginStart="25dp"
            android:text="@string/browse_files_button_text" />

        <Button
            android:id="@+id/goto_weather_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/popup_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/next_page" />

    </RelativeLayout>
</ScrollView>