<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0dp"
            android:text="@string/app_name"
            android:textColor="#757575"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_title"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/author"
            android:textColor="#616161"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/investments_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="25dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/investments_title"
            android:textColor="#757575"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/investments_item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/investments_title"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/investments_item_1"
            android:textColor="#757575"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/investments_item_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/investments_item_1"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/investments_item_2"
            android:textColor="#757575"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/investments_item_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/investments_item_2"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/investments_item_3"
            android:textColor="#757575"
            android:textSize="14sp" />


        <Button
            android:id="@+id/goto_weather_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/investments_item_3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:text="@string/previous_page" />

    </RelativeLayout>
</ScrollView>