<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0dp"
            android:text="@string/app_name"
            android:textColor="#757575"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_title"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/author"
            android:textColor="#616161"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/weather_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="25dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/weather_title"
            android:textColor="#757575"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/weather_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_title"
            android:fontFamily="monospace"
            android:paddingStart="25dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/weather_paragraph"
            android:textColor="#757575"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/latTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather_paragraph"
            android:text="Latitude will be here! "
            android:textColor="#757575" />

        <TextView
            android:id="@+id/lonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/latTextView"
            android:text="Longitude will be here! "
            android:textColor="#757575" />

        <Button
            android:id="@+id/goto_home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lonTextView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:text="@string/previous_page" />

        <Button
            android:id="@+id/goto_investments_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lonTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/next_page" />

    </RelativeLayout>
</ScrollView>